--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>RGB Color Game</title>
-  <link href="css/screen.css" rel="stylesheet" />
+  <link href="css/screen.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <h3>The Great <span id="color-display">RGB</span> Color Game</h3>
+
+  <div class="flex-container">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+  </div>
+
 
 <script type="text/javascript" src="js/script.js">
-
 </script>
 </body>
 </html>
