reset btn working

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link href="css/screen.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <h3>The Great <span id="color-display">RGB</span> Color Game</h3>
+  <h3 id="header">The Great <span id="color-display">RGB</span> Color Game</h3>
+  <div id="stripe">
+    <button id="reset">New Colors</button>
+    <span id="message"></span>
+  </div>
 
   <div class="flex-container">
     <div class="square"></div>
