--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id="stripe">
     <button id="reset">New Colors</button>
     <span id="message"></span>
-    <button id="easy-btn" type="button" name="button">Easy</button>
-    <button id="hard-btn" class="selected" type="button" name="button">Hard</button>
+    <button class="mode" type="button" name="button">Easy</button>
+    <button class="mode selected" type="button" name="button">Hard</button>
   </div>
 
   <div class="flex-container">
