--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>RGB Color Game</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
   <link href="css/screen.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <h1 id="header">The Great
