--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button class="mode selected" type="button" name="button">Hard</button>
   </div>
 
-  <div class="flex-container">
+  <div class="squares-container">
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
