add margin to bottom squares

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <div class="square bottom"></div>
+    <div class="square bottom"></div>
+    <div class="square bottom"></div>
   </div>
 
 
