add brief instructions

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1 id="header">The Great
-    <br />
-    <span id="color-display">RGB</span>
-    <br />
-    Guessing Game</h1>
+  <div>
+
+  <div id="header-container">
+    <h1 id="header">The Great
+      <br />
+      <span id="color-display">RGB</span>
+      <br />
+      Guessing Game
+    </h1>
+    <p>Match each colored square with the correct RGB value listed above. Happy styling!</p>
+  </div>
   <div id="stripe">
     <button id="reset">New Colors</button>
     <span id="message"></span>
